JavaScriptAudioNode should not ASSERT if number of input channels is 0 https://bugs.webkit.org/show_bug.cgi?id=85818

Patch by Raymond Toy <rtoy@google.com> on 2012-05-08
Reviewed by Eric Seidel.

Source/WebCore:

Test: webaudio/javascriptaudionode-zero-input-channels.html

* Modules/webaudio/JavaScriptAudioNode.cpp:
(WebCore::JavaScriptAudioNode::process): Update buffersAreGood.
(WebCore::JavaScriptAudioNode::fireProcessEvent): Remove ASSERT.

LayoutTests:

* webaudio/javascriptaudionode-zero-input-channels-expected.txt: Added.
* webaudio/javascriptaudionode-zero-input-channels.html: Added.

Canonical link: https://commits.webkit.org/103515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116465 268f45cc-cd09-0410-ab3c-d52691b4dbfc